--- a/views/result.twig
+++ b/views/result.twig
@@ -8,6 +8,10 @@
 <body>
     <div class='container'>
         <h1>Your search results:</h1>
+        {% if albums is empty %}
+        <p>No albums match your search.</p>
+        {% endif %}
+        
         {% for album in albums %}
         <div class='row'>
                <div class='col-md-6'>
